--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- load the pattern lab css -->
-    <link rel="stylesheet" href="https://demo.patternlab.io/styleguide/css/styleguide.min.css" media="all" />
+    <link rel="stylesheet" href="styleguide/css/styleguide.min.css" media="all" />
     <link rel="stylesheet" href="./source/css/style.css" media="all" />
-    <link rel="stylesheet" href="https://demo.patternlab.io/styleguide/css/prism-typeahead.min.css" media="all" />
+    <link rel="stylesheet" href="styleguide/css/prism-typeahead.min.css" media="all" />
     
   </head>
   <body id="patternlab-body">
