Remove London data on live search

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -278,54 +278,7 @@
               </div>
             </div>
             <div class="tab-pane" id="london" role="tabpanel">
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£60</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£60</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£60</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£25</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
+              London
             </div>
             <div class="tab-pane" id="liverpool" role="tabpanel">
               Liverpool
