Remove home page errors

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -103,7 +103,7 @@
             <form class="js-search-form">
               <fieldset>
                 <legend class="h1 [ text--center text--white ]">One Easy Flight Search.</legend>
-                <div class="col-xs-12 col-md-12">
+                <!--<div class="col-xs-12 col-md-12">
                   <div class="[ p--1 mb--2 ] [ alert alert-danger alert-dismissible ]" role="alert">
                     <strong>First name</strong>: Error text
                   </div>
@@ -112,7 +112,7 @@
                   <div class="[ p--1 mb--2 ] [ alert alert-warning alert-dismissible ]" role="alert">
                     <strong>Last name</strong>: Error text
                   </div>
-                </div>
+                </div>-->
                 <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
                   <label class="d--block text--white mb--1 hidden-xs" for="flight-from">Travelling from</label>
                   <input type="text" id="flight-from" name="flight-from" placeholder="From" value="" class="col-xs-12">
