Manual edit of patternlab stuff

--- a/public/patterns/01-templates-01-homepage/02-search-results.rendered.html
+++ b/public/patterns/01-templates-01-homepage/02-search-results.rendered.html
@@ -597,8 +597,8 @@
         "patternType": "templates"
       },
       "patternExtension": "mustache",
-      "patternName": "Homepage",
-      "patternPartial": "templates-homepage",
+      "patternName": "Search results",
+      "patternPartial": "templates-search-results",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
