Replace and add new files

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
     
     <!-- load the pattern lab css -->
     <link rel="stylesheet" href="styleguide/css/styleguide.min.css" media="all" />
-    <link rel="stylesheet" href="./source/css/style.css" media="all" />
     <link rel="stylesheet" href="styleguide/css/prism-typeahead.min.css" media="all" />
     
   </head>
@@ -131,7 +130,7 @@
             <li><a href="#" target="_blank" id="sg-raw">Open in new window</a></li>
           {{/ ishControlsHide.views-new }}
           {{^ ishControlsHide.tools-docs }}
-            <li><a href="https://patternlab.io/docs/" target="_blank">Pattern Lab Docs</a></li>
+            <li><a href="http://patternlab.io/docs/" target="_blank">Pattern Lab Docs</a></li>
           {{/ ishControlsHide.tools-docs }}
           {{^ ishControlsHide.find }}
             <li id="sg-find"><input class="typeahead" id="typeahead" type="text" placeholder="Find pattern" /></li>
