--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498991631279" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498991631279" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498991889037" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498991889037" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498991631279" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498991631279" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498991889037" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498991889037" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -44,9 +44,9 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <!-- Custom date range -->
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
   </head>
 
   <body>
@@ -613,10 +613,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498991631279">
+  <script id="pl-js-polyfill-insert-1498991889037">
     (function() {
       if (self != top) {
-        var cb = '1498991631279';
+        var cb = '1498991889037';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -626,10 +626,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498991631279">
+  <script id="pl-js-insert-1498991889037">
     (function() {
       if (self != top) {
-        var cb = '1498991631279';
+        var cb = '1498991889037';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
