Ad slick slider https; update image refs

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
@@ -10,8 +10,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Logo slider -->
-  <link href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" rel="stylesheet">
-  <script src="/cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
   <!-- Checkbox toggle switch -->
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
@@ -138,32 +138,32 @@
   </section>
 
   <section class="border-bottom text--center [ mb--3 pt--3 pb--3 ] brands [ regular slider ]">
-    <div><img alt="Aer Lingus" src="images/onestepbooking__logo--aer-lingus.png"></div>
-    <div><img alt="Air Asia" src="images/onestepbooking__logo--air-asia.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--airarabia.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--cebu-pacific.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--cityjet.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--corendon.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--easyjet.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--eurowings.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--flybe.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--eurowings.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--flyscoot.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--jet2.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--monarch.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--norwegian.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--pegasus.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--ryanair.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--southwest.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--spirit.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--sun-express.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--thomas-cook.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--transavia.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--tui-fly.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--virgin-australia.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--volotea.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--vueling.png"></div>
-    <div><img alt="Air Arabia" src="images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Aer Lingus" src="styles-osb/public/images/onestepbooking__logo--aer-lingus.png"></div>
+    <div><img alt="Air Asia" src="styles-osb/public/images/onestepbooking__logo--air-asia.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--airarabia.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--cebu-pacific.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--cityjet.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--corendon.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--easyjet.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--flybe.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--flyscoot.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--jet2.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--monarch.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--norwegian.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--pegasus.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--ryanair.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--southwest.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--spirit.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--sun-express.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--thomas-cook.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--transavia.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--tui-fly.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--virgin-australia.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--volotea.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--vueling.png"></div>
+    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
   </section>
 
   <section class="[ mb--3 pt--2 pb--3 ] live-prices">
