Add images absolute path

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
@@ -138,32 +138,32 @@
   </section>
 
   <section class="border-bottom text--center [ mb--3 pt--3 pb--3 ] brands [ regular slider ]">
-    <div><img alt="Aer Lingus" src="styles-osb/public/images/onestepbooking__logo--aer-lingus.png"></div>
-    <div><img alt="Air Asia" src="styles-osb/public/images/onestepbooking__logo--air-asia.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--airarabia.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--cebu-pacific.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--cityjet.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--corendon.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--easyjet.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--flybe.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--flyscoot.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--jet2.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--monarch.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--norwegian.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--pegasus.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--ryanair.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--southwest.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--spirit.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--sun-express.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--thomas-cook.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--transavia.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--tui-fly.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--virgin-australia.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--volotea.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--vueling.png"></div>
-    <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Aer Lingus" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--aer-lingus.png"></div>
+    <div><img alt="Air Asia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--air-asia.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--airarabia.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--cebu-pacific.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--cityjet.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--corendon.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--easyjet.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--flybe.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--flyscoot.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--jet2.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--monarch.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--norwegian.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--pegasus.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--ryanair.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--southwest.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--spirit.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--sun-express.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--thomas-cook.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--transavia.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--tui-fly.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--virgin-australia.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--volotea.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--vueling.png"></div>
+    <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
   </section>
 
   <section class="[ mb--3 pt--2 pb--3 ] live-prices">
