--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498992352576" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498992352576" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498992475064" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498992475064" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498992352576" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498992352576" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498992475064" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498992475064" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -166,32 +166,32 @@
     </section>
 
     <section class="border-bottom text--center [ mb--3 pt--3 pb--3 ] brands [ regular slider ]">
-      <div><img alt="Aer Lingus" src="styles-osb/public/images/onestepbooking__logo--aer-lingus.png"></div>
-      <div><img alt="Air Asia" src="styles-osb/public/images/onestepbooking__logo--air-asia.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--airarabia.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--cebu-pacific.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--cityjet.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--corendon.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--easyjet.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--flybe.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--flyscoot.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--jet2.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--monarch.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--norwegian.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--pegasus.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--ryanair.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--southwest.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--spirit.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--sun-express.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--thomas-cook.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--transavia.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--tui-fly.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--virgin-australia.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--volotea.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--vueling.png"></div>
-      <div><img alt="Air Arabia" src="styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+      <div><img alt="Aer Lingus" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--aer-lingus.png"></div>
+      <div><img alt="Air Asia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--air-asia.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--airarabia.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--cebu-pacific.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--cityjet.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--corendon.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--easyjet.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--flybe.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--flyscoot.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--jet2.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--monarch.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--norwegian.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--pegasus.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--ryanair.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--southwest.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--spirit.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--sun-express.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--thomas-cook.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--transavia.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--tui-fly.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--virgin-australia.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--volotea.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--vueling.png"></div>
+      <div><img alt="Air Arabia" src="https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--eurowings.png"></div>
     </section>
 
     <section class="[ mb--3 pt--2 pb--3 ] live-prices">
@@ -613,10 +613,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498992352576">
+  <script id="pl-js-polyfill-insert-1498992475064">
     (function() {
       if (self != top) {
-        var cb = '1498992352576';
+        var cb = '1498992475064';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -626,10 +626,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498992352576">
+  <script id="pl-js-insert-1498992475064">
     (function() {
       if (self != top) {
-        var cb = '1498992352576';
+        var cb = '1498992475064';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
