--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
@@ -91,7 +91,7 @@
               </div>
               <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
                 <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
-                <input type="text" id="flight-departure" name="daterange" placeholder="Date" value="2017-08-19" class="col-xs-12">
+                <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
               </div>
               <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
                 <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
@@ -103,9 +103,9 @@
                   </label>
                 </div>
               </div>
-              <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3">
+              <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
                 <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
-                <input type="date" id="flight-return" name="flight-return" placeholder="Date" value="2017-08-19" class="col-xs-12">
+                <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
               </div>
               <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
                 <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
