--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498992717637" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498992717637" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498992925520" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498992925520" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498992717637" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498992717637" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498992925520" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498992925520" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -119,7 +119,7 @@
                 </div>
                 <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
                   <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
-                  <input type="text" id="flight-departure" name="daterange" placeholder="Date" value="2017-08-19" class="col-xs-12">
+                  <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
                 </div>
                 <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
                   <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
@@ -131,9 +131,9 @@
                   </label>
                   </div>
                 </div>
-                <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3">
+                <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
                   <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
-                  <input type="date" id="flight-return" name="flight-return" placeholder="Date" value="2017-08-19" class="col-xs-12">
+                  <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
                 </div>
                 <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
                   <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
@@ -622,10 +622,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498992717637">
+  <script id="pl-js-polyfill-insert-1498992925520">
     (function() {
       if (self != top) {
-        var cb = '1498992717637';
+        var cb = '1498992925520';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -635,10 +635,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498992717637">
+  <script id="pl-js-insert-1498992925520">
     (function() {
       if (self != top) {
-        var cb = '1498992717637';
+        var cb = '1498992925520';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
