--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498993091728" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993091728" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498993181532" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993181532" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993091728" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993091728" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993181532" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993181532" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -2636,68 +2636,68 @@
             <form class="js-search-form">
               <fieldset>
                 <legend class="h1 [ text--center text--white ]">One Easy Flight Search.</legend>
-                <div class="col-xs-12 col-md-12">
+                <<!--div class="col-xs-12 col-md-12">
                   <div class="[ p--1 mb--2 ] [ alert alert-danger alert-dismissible ]" role="alert">
                     <strong>First name</strong>: Error text
                   </div>
-                </div>
-                <div class="col-xs-12 col-md-12">
-                  <div class="[ p--1 mb--2 ] [ alert alert-warning alert-dismissible ]" role="alert">
-                    <strong>Last name</strong>: Error text
-                  </div>
-                </div>
-                <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
-                  <label class="d--block text--white mb--1 hidden-xs" for="flight-from">Travelling from</label>
-                  <input type="text" id="flight-from" name="flight-from" placeholder="From" value="" class="col-xs-12">
-                </div>
-                <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
-                  <label class="d--block text--white mb--1 hidden-xs" for="flight-to">Travelling to</label>
-                  <input type="text" id="flight-to" name="flight-to" placeholder="To" value="" class="col-xs-12">
-                </div>
-                <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
-                  <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
-                  <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
-                </div>
-                <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
-                  <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
-                  <div class="onoffswitch">
-                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                    <label class="onoffswitch-label small" for="myonoffswitch">
+          </div>
+          <div class="col-xs-12 col-md-12">
+            <div class="[ p--1 mb--2 ] [ alert alert-warning alert-dismissible ]" role="alert">
+              <strong>Last name</strong>: Error text
+            </div>
+          </div>-->
+          <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
+            <label class="d--block text--white mb--1 hidden-xs" for="flight-from">Travelling from</label>
+            <input type="text" id="flight-from" name="flight-from" placeholder="From" value="" class="col-xs-12">
+          </div>
+          <div class="[ col-xs-12 col-sm-6 col-md-6 ] mb--3 form-error">
+            <label class="d--block text--white mb--1 hidden-xs" for="flight-to">Travelling to</label>
+            <input type="text" id="flight-to" name="flight-to" placeholder="To" value="" class="col-xs-12">
+          </div>
+          <div class="[ col-xs-9 col-sm-5 col-md-5 ] mb--3">
+            <label class="d--block text--white mb--1" for="flight-departure"><span class="hidden-xs">Date</span> Departing</label>
+            <input type="text" id="flight-departure" name="flight-departure" placeholder="Date" value="08-09-2017" class="date-popout col-xs-12">
+          </div>
+          <div class="[ col-xs-3 col-sm-2 col-md-2 ] mb--3">
+            <div class="d--inline-block [ text--white text--center ] mb--1">Return?</div>
+            <div class="onoffswitch">
+              <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+              <label class="onoffswitch-label small" for="myonoffswitch">
                       <span class="onoffswitch-inner"></span>
                       <span class="onoffswitch-switch"></span>
                   </label>
-                  </div>
-                </div>
-                <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
-                  <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
-                  <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
-                </div>
-                <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
-                  <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
-                  <select id="flight-passengers" name="flight-passengers" placeholder="Passengers" value="" class="col-xs-12">
+            </div>
+          </div>
+          <div class="[ col-xs-12 col-sm-5 col-md-5 ] mb--3 date-return">
+            <label class="d--block text--white mb--1" for="flight-return"><span class="hidden-xs">Date</span> Returning</label>
+            <input type="text" id="flight-return" name="flight-return" placeholder="Date" value="11-09-2017" class="date-popout col-xs-12">
+          </div>
+          <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
+            <label class="d--block text--white mb--1" for="flight-passengers">Adults</label>
+            <select id="flight-passengers" name="flight-passengers" placeholder="Passengers" value="" class="col-xs-12">
                 <option value="one">1</option>
                 <option value="two">2</option>
                 <option value="three">3</option>
                 <option value="four">4</option>
               </select>
-                </div>
-                <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
-                  <label class="d--block text--white mb--1" for="flight-passenger-18">Under 18s</label>
-                  <select id="flight-passengers-18" name="flight-passengers-18" placeholder="Passengers" value="" class="col-xs-12">
+          </div>
+          <div class="[ col-xs-6 col-sm-6 col-md-6 ] mb--3">
+            <label class="d--block text--white mb--1" for="flight-passenger-18">Under 18s</label>
+            <select id="flight-passengers-18" name="flight-passengers-18" placeholder="Passengers" value="" class="col-xs-12">
                 <option value="zero">0</option>
                 <option value="one">1</option>
                 <option value="two">2</option>
                 <option value="three">3</option>
                 <option value="four">4</option>
               </select>
-                </div>
-                <div class="[ col-xs-12 col-sm-12 col-md-6 col-md-push-3 ] text--center">
-                  <button class="[ button button--orange ] col-md-12">Search for flights</button>
-                </div>
-              </fieldset>
-            </form>
           </div>
+          <div class="[ col-xs-12 col-sm-12 col-md-6 col-md-push-3 ] text--center">
+            <button class="[ button button--orange ] col-md-12">Search for flights</button>
+          </div>
+          </fieldset>
+          </form>
         </div>
+      </div>
       </div>
 
     </section>
@@ -3159,10 +3159,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498993091728">
+  <script id="pl-js-polyfill-insert-1498993181532">
     (function() {
       if (self != top) {
-        var cb = '1498993091728';
+        var cb = '1498993181532';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -3172,10 +3172,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498993091728">
+  <script id="pl-js-insert-1498993181532">
     (function() {
       if (self != top) {
-        var cb = '1498993091728';
+        var cb = '1498993181532';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
