Cross-template image reference updates and script locations

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498993181532" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993181532" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498993525099" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993525099" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993181532" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993181532" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993525099" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993525099" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -2811,54 +2811,7 @@
               </div>
             </div>
             <div class="tab-pane" id="london" role="tabpanel">
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£60</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£60</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£60</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
-              <div class="[ col-xs-6 col-md-6 ]">
-                <a href="#" class="link--unstyled live-search">
-                  <div class="col-md-4"><i class="fa fa-plane"></i> <span class="text--lighter">to</span> Palma</div>
-                  <div class="col-md-3">18 Oct 17</div>
-                  <div class="col-xs-6 col-md-2">
-                    <strong>£25</strong>
-                  </div>
-                  <div class="col-xs-6 col-md-3 cta">
-                    <span class="button button--green">Buy</span>
-                  </div>
-                </a>
-              </div>
+              London
             </div>
             <div class="tab-pane" id="liverpool" role="tabpanel">
               Liverpool
@@ -3159,10 +3112,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498993181532">
+  <script id="pl-js-polyfill-insert-1498993525099">
     (function() {
       if (self != top) {
-        var cb = '1498993181532';
+        var cb = '1498993525099';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -3172,10 +3125,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498993181532">
+  <script id="pl-js-insert-1498993525099">
     (function() {
       if (self != top) {
-        var cb = '1498993181532';
+        var cb = '1498993525099';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
