--- a/public/patterns/01-templates-03-content-page/01-templates-03-content-page.markup-only.html
+++ b/public/patterns/01-templates-03-content-page/01-templates-03-content-page.markup-only.html
@@ -14,9 +14,9 @@
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
   <!-- Include Bootstrap Datepicker -->
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
 
   <style>
     .text--white {
@@ -1964,7 +1964,7 @@
     }
 
     .dropdown-toggle:after {
-      background: url("/images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
+      background: url("../images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
       content: "";
       height: 18px;
       position: absolute;
@@ -2093,7 +2093,7 @@
     }
 
     .navbar-brand {
-      background: url("/images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
+      background: url("../images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
       height: 21px;
       left: 18px;
       position: absolute;
@@ -2104,7 +2104,7 @@
 
     @media all and (min-width: 1024px) {
       .navbar-brand {
-        background-image: url("/images/onestepbooking__logo--white.svg");
+        background-image: url("../images/onestepbooking__logo--white.svg");
         left: calc(9px*3);
         top: 25px;
       }
