--- a/public/patterns/01-templates-03-content-page/01-templates-03-content-page.rendered.html
+++ b/public/patterns/01-templates-03-content-page/01-templates-03-content-page.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498993181532" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993181532" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498993525099" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993525099" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993181532" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993181532" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993525099" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993525099" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -42,9 +42,9 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <!-- Include Bootstrap Datepicker -->
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
 
     <style>
       .text--white {
@@ -1992,7 +1992,7 @@
       }
 
       .dropdown-toggle:after {
-        background: url("/images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
+        background: url("../images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
         content: "";
         height: 18px;
         position: absolute;
@@ -2121,7 +2121,7 @@
       }
 
       .navbar-brand {
-        background: url("/images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
+        background: url("../images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
         height: 21px;
         left: 18px;
         position: absolute;
@@ -2132,7 +2132,7 @@
 
       @media all and (min-width: 1024px) {
         .navbar-brand {
-          background-image: url("/images/onestepbooking__logo--white.svg");
+          background-image: url("../images/onestepbooking__logo--white.svg");
           left: calc(9px*3);
           top: 25px;
         }
@@ -2946,10 +2946,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498993181532">
+  <script id="pl-js-polyfill-insert-1498993525099">
     (function() {
       if (self != top) {
-        var cb = '1498993181532';
+        var cb = '1498993525099';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -2959,10 +2959,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498993181532">
+  <script id="pl-js-insert-1498993525099">
     (function() {
       if (self != top) {
-        var cb = '1498993181532';
+        var cb = '1498993525099';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
