--- a/public/patterns/01-templates-04-checkout/01-templates-04-checkout.markup-only.html
+++ b/public/patterns/01-templates-04-checkout/01-templates-04-checkout.markup-only.html
@@ -1951,7 +1951,7 @@
     }
 
     .dropdown-toggle:after {
-      background: url("../images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
+      background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
       content: "";
       height: 18px;
       position: absolute;
@@ -2080,7 +2080,7 @@
     }
 
     .navbar-brand {
-      background: url("../images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
+      background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
       height: 21px;
       left: 18px;
       position: absolute;
@@ -2091,7 +2091,7 @@
 
     @media all and (min-width: 1024px) {
       .navbar-brand {
-        background-image: url("../images/onestepbooking__logo--white.svg");
+        background-image: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--white.svg");
         left: calc(9px*3);
         top: 25px;
       }
@@ -2628,13 +2628,13 @@
     }
 
     .collapse--toggle {
-      background: url(../images/onestepbooking__asset--minus.svg) no-repeat 0 0 transparent;
+      background: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--minus.svg) no-repeat 0 0 transparent;
       padding-left: calc(9px*3);
       transition: all ease .3s;
     }
 
     .collapse--toggle.collapsed {
-      background: url(../images/onestepbooking__asset--plus.svg) no-repeat 0 0 transparent;
+      background: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plus.svg) no-repeat 0 0 transparent;
     }
     /*# sourceMappingURL=checkout.css.map */
   </style>
