--- a/public/patterns/01-templates-04-checkout/01-templates-04-checkout.rendered.html
+++ b/public/patterns/01-templates-04-checkout/01-templates-04-checkout.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498993603351" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993603351" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498993726339" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498993726339" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993603351" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993603351" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498993726339" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498993726339" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -1979,7 +1979,7 @@
       }
 
       .dropdown-toggle:after {
-        background: url("../images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
+        background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
         content: "";
         height: 18px;
         position: absolute;
@@ -2108,7 +2108,7 @@
       }
 
       .navbar-brand {
-        background: url("../images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
+        background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
         height: 21px;
         left: 18px;
         position: absolute;
@@ -2119,7 +2119,7 @@
 
       @media all and (min-width: 1024px) {
         .navbar-brand {
-          background-image: url("../images/onestepbooking__logo--white.svg");
+          background-image: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--white.svg");
           left: calc(9px*3);
           top: 25px;
         }
@@ -2656,13 +2656,13 @@
       }
 
       .collapse--toggle {
-        background: url(../images/onestepbooking__asset--minus.svg) no-repeat 0 0 transparent;
+        background: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--minus.svg) no-repeat 0 0 transparent;
         padding-left: calc(9px*3);
         transition: all ease .3s;
       }
 
       .collapse--toggle.collapsed {
-        background: url(../images/onestepbooking__asset--plus.svg) no-repeat 0 0 transparent;
+        background: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plus.svg) no-repeat 0 0 transparent;
       }
       /*# sourceMappingURL=checkout.css.map */
     </style>
@@ -3100,10 +3100,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498993603351">
+  <script id="pl-js-polyfill-insert-1498993726339">
     (function() {
       if (self != top) {
-        var cb = '1498993603351';
+        var cb = '1498993726339';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -3113,10 +3113,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498993603351">
+  <script id="pl-js-insert-1498993726339">
     (function() {
       if (self != top) {
-        var cb = '1498993603351';
+        var cb = '1498993726339';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
