Fix search styling

--- a/public/patterns/01-templates-02-search-results/01-templates-02-search-results.rendered.html
+++ b/public/patterns/01-templates-02-search-results/01-templates-02-search-results.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498994342566" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498994342566" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1498994475014" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498994475014" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498994342566" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498994342566" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498994475014" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498994475014" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -1992,7 +1992,7 @@
       }
 
       .dropdown-toggle:after {
-        background: url("../images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
+        background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--chevron-down.svg") center center no-repeat transparent;
         content: "";
         height: 18px;
         position: absolute;
@@ -2121,7 +2121,7 @@
       }
 
       .navbar-brand {
-        background: url("../images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
+        background: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--blue.svg") 0 0 no-repeat transparent;
         height: 21px;
         left: 18px;
         position: absolute;
@@ -2132,7 +2132,7 @@
 
       @media all and (min-width: 1024px) {
         .navbar-brand {
-          background-image: url("../images/onestepbooking__logo--white.svg");
+          background-image: url("https://louriach.github.io/styles-osb/public/images/onestepbooking__logo--white.svg");
           left: calc(9px*3);
           top: 25px;
         }
@@ -3218,10 +3218,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498994342566">
+  <script id="pl-js-polyfill-insert-1498994475014">
     (function() {
       if (self != top) {
-        var cb = '1498994342566';
+        var cb = '1498994475014';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -3231,10 +3231,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498994342566">
+  <script id="pl-js-insert-1498994475014">
     (function() {
       if (self != top) {
-        var cb = '1498994342566';
+        var cb = '1498994475014';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
