Add Montserrat font

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1498994475014" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1498994475014" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1499163465289" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1499163465289" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1498994475014" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1498994475014" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1499163465289" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1499163465289" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -47,6 +47,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+    <!-- Montserrat font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i" rel="stylesheet">
 
     <style>
       .text--white {
@@ -3112,10 +3114,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1498994475014">
+  <script id="pl-js-polyfill-insert-1499163465289">
     (function() {
       if (self != top) {
-        var cb = '1498994475014';
+        var cb = '1499163465289';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -3125,10 +3127,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1498994475014">
+  <script id="pl-js-insert-1499163465289">
     (function() {
       if (self != top) {
-        var cb = '1498994475014';
+        var cb = '1499163465289';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
