--- a/public/patterns/01-templates-02-search-results/01-templates-02-search-results.markup-only.html
+++ b/public/patterns/01-templates-02-search-results/01-templates-02-search-results.markup-only.html
@@ -18,6 +18,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
   <!-- font awesome -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Montserrat font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i" rel="stylesheet">
   <style>
     .text--white {
       color: #fff;
