NEw image paths

--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.markup-only.html
@@ -2805,15 +2805,15 @@
     }
 
     .icon-wrap--plane:before {
-      background-image: url(../images/onestepbooking__asset--plane.svg);
+      background-image: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg);
     }
 
     .icon-wrap--calendar:before {
-      background-image: url(../images/onestepbooking__asset--calendar.svg);
+      background-image: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--calendar.svg);
     }
 
     .icon-wrap--user:before {
-      background-image: url(../images/onestepbooking__asset--user.svg);
+      background-image: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--user.svg);
     }
 
     .form-wrap {
