--- a/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
+++ b/public/patterns/01-templates-01-homepage/01-templates-01-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1500291394328" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500291394328" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1500291548679" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500291548679" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500291394328" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500291394328" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500291548679" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500291548679" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -2833,15 +2833,15 @@
       }
 
       .icon-wrap--plane:before {
-        background-image: url(../images/onestepbooking__asset--plane.svg);
+        background-image: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--plane.svg);
       }
 
       .icon-wrap--calendar:before {
-        background-image: url(../images/onestepbooking__asset--calendar.svg);
+        background-image: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--calendar.svg);
       }
 
       .icon-wrap--user:before {
-        background-image: url(../images/onestepbooking__asset--user.svg);
+        background-image: url(https://louriach.github.io/styles-osb/public/images/onestepbooking__asset--user.svg);
       }
 
       .form-wrap {
@@ -6067,10 +6067,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1500291394328">
+  <script id="pl-js-polyfill-insert-1500291548679">
     (function() {
       if (self != top) {
-        var cb = '1500291394328';
+        var cb = '1500291548679';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -6080,10 +6080,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1500291394328">
+  <script id="pl-js-insert-1500291548679">
     (function() {
       if (self != top) {
-        var cb = '1500291394328';
+        var cb = '1500291548679';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
